<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".Main2Activity">

  <ScrollView

      android:layout_width="fill_parent"
      android:layout_height="fill_parent">



<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="110dp"
        android:layout_marginTop="50dp"
        android:layout_height="100dp"
        android:background="@drawable/appicon_bkg"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:src="@drawable/app_icon" />


    <EditText
        android:id="@+id/name_Edit_txt"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="2dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/edittext_background"
        android:drawableLeft="@drawable/ic_person_outline_black_24dp"
        android:drawablePadding="5dp"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:padding="5dp"
        android:singleLine="true"
        android:textColorHint="#020969"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/email_Edit_txt"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/edittext_background"
        android:drawableLeft="@drawable/ic_email_24dp"
        android:drawablePadding="5dp"
        android:hint="@string/Email_edittext"
        android:inputType="text"
        android:padding="5dp"
        android:singleLine="true"
        android:textColorHint="#020969"
        android:textSize="20sp" />


    <EditText
        android:id="@+id/password_Edit_txt"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:password="true"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/edittext_background"
        android:drawableLeft="@drawable/ic_area_24dp"
        android:drawablePadding="5dp"
        android:hint="@string/password"
        android:inputType="text"
        android:padding="5dp"
        android:singleLine="true"
        android:textColorHint="#020969"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/conFirmPassword_Edit_txt"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="8dp"
        android:password="true"
        android:layout_marginRight="10dp"
        android:background="@drawable/edittext_background"
        android:drawableLeft="@drawable/ic_area_24dp"
        android:drawablePadding="5dp"
        android:hint="@string/confirm_password"
        android:inputType="text"
        android:padding="5dp"
        android:singleLine="true"
        android:textColorHint="#020969"
        android:textSize="20sp" />


    <EditText
        android:id="@+id/phoneRg_Edit_txt"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/edittext_background"
        android:drawableLeft="@drawable/ic_phone_24dp"
        android:drawablePadding="5dp"
        android:hint="@string/phone"
        android:inputType="phone"
        android:digits="01234567891011"
        android:padding="5dp"
        android:singleLine="true"
        android:textColorHint="#020969"
        android:textSize="20sp" />


    <EditText
        android:id="@+id/govern_Edit_txt"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/edittext_background"
        android:drawableLeft="@drawable/governate_icon_24dp"
        android:drawablePadding="5dp"
        android:hint="@string/governerate_area"
        android:inputType="text"
        android:padding="5dp"
        android:singleLine="true"
        android:textColorHint="#020969"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/adress_Edit_txt"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/edittext_background"
        android:drawableLeft="@drawable/address_icon_24dp"
        android:drawablePadding="5dp"
        android:hint="@string/adress"
        android:inputType="text"
        android:padding="5dp"
        android:singleLine="true"
        android:textColorHint="#020969"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/radio_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/female" />
    </RadioGroup>

    <Button

        android:id="@+id/registerbtn"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_background"
        android:text="@string/regester"
        android:layout_marginBottom="20dp"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />



</LinearLayout>
  </ScrollView>


</LinearLayout>