<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/we"
    android:padding="10dp"

    android:id="@+id/ll"
    tools:context=".MainPageActivity">

   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

       <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:orientation="vertical"
                android:layout_marginTop="18dp"
                >
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    android:src="@drawable/app_icon"
                    android:layout_marginBottom="10dp"/>

            </LinearLayout>

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="528dp"
               android:background="@drawable/linerlayout_design_mainpage"

               android:orientation="vertical">

               <LinearLayout

                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:gravity="center"
                   android:orientation="horizontal">

                   <androidx.cardview.widget.CardView
                       android:id="@+id/checkhealth_card"
                       android:layout_width="130dp"
                       android:layout_height="130dp"
                       android:layout_margin="10dp"
                       android:background="@drawable/cardone_design"
                       android:clickable="true"

                       android:foreground="?android:attr/selectableItemBackground"
                       app:cardCornerRadius="30dp">

                       <LinearLayout
                           android:layout_width="match_parent"
                           android:layout_height="match_parent"
                           android:background="@drawable/cardone_design"
                           android:gravity="center"
                           android:orientation="vertical">

                           <ImageView
                               android:layout_width="64dp"
                               android:layout_height="64dp"
                               android:background="@drawable/circle_patient_background"
                               android:padding="10dp"
                               android:src="@drawable/person" />

                           <TextView
                               android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
                               android:layout_marginTop="10dp"
                               android:text="@string/diagnosis"
                               android:textColor="#020969"
                               android:textSize="15sp"
                               android:textStyle="bold" />

                       </LinearLayout>
                   </androidx.cardview.widget.CardView>

                   <androidx.cardview.widget.CardView
                       android:id="@+id/services_card"
                       android:layout_width="130dp"
                       android:layout_height="130dp"
                       android:layout_margin="10dp"
                       android:clickable="true"
                       android:foreground="?android:attr/selectableItemBackground"
                       app:cardCornerRadius="30dp">

                       <LinearLayout
                           android:layout_width="match_parent"
                           android:layout_height="match_parent"
                           android:background="@drawable/cardhospital_design"
                           android:gravity="center"
                           android:orientation="vertical">

                           <ImageView
                               android:layout_width="64dp"
                               android:layout_height="64dp"
                               android:background="@drawable/circle_hospital_background"
                               android:padding="10dp"
                               android:src="@drawable/services_icon_24dp" />

                           <TextView
                               android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
                               android:layout_marginTop="10dp"
                               android:text="@string/services"
                               android:textColor="#020969"
                               android:textSize="15sp"
                               android:textStyle="bold" />

                       </LinearLayout>
                   </androidx.cardview.widget.CardView>

               </LinearLayout>

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:gravity="center"
                   android:orientation="horizontal">

                   <androidx.cardview.widget.CardView
                       android:id="@+id/news_Card"
                       android:layout_width="130dp"
                       android:layout_height="130dp"
                       android:layout_margin="10dp"
                       android:background="@drawable/cardone_design"
                       android:clickable="true"
                       android:foreground="?android:attr/selectableItemBackground"
                       app:cardCornerRadius="30dp">

                       <LinearLayout
                           android:layout_width="match_parent"
                           android:layout_height="match_parent"
                           android:background="@drawable/cardnews_design"
                           android:gravity="center"
                           android:orientation="vertical">

                           <ImageView
                               android:layout_width="64dp"
                               android:layout_height="64dp"
                               android:background="@drawable/circle_news_background"
                               android:padding="10dp"
                               android:src="@drawable/news_icon_24dp" />

                           <TextView
                               android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
                               android:layout_marginTop="10dp"
                               android:text="@string/latest_news"
                               android:textColor="#020969"
                               android:textSize="15sp"
                               android:textStyle="bold" />


                       </LinearLayout>
                   </androidx.cardview.widget.CardView>

                   <androidx.cardview.widget.CardView
                       android:layout_width="130dp"
                       android:layout_height="130dp"
                       android:layout_margin="10dp"
                       android:id="@+id/advieces_card"
                       android:background="@drawable/cardadvices_design"
                       android:clickable="true"
                       android:foreground="?android:attr/selectableItemBackground"
                       app:cardCornerRadius="30dp">

                       <LinearLayout
                           android:layout_width="match_parent"
                           android:layout_height="match_parent"
                           android:background="@drawable/cardadvices_design"
                           android:gravity="center"
                           android:orientation="vertical">

                           <ImageView
                               android:layout_width="64dp"
                               android:layout_height="64dp"
                               android:background="@drawable/circle_advices_background"
                               android:padding="10dp"
                               android:src="@drawable/advices_icon" />

                           <TextView
                               android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
                               android:layout_marginTop="10dp"
                               android:text="@string/prevention_tips"
                               android:textColor="#020969"
                               android:textSize="15sp"
                               android:textStyle="bold" />


                       </LinearLayout>
                   </androidx.cardview.widget.CardView>

               </LinearLayout>

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="222dp"
                   android:gravity="center"
                   android:orientation="horizontal">

                   <androidx.cardview.widget.CardView
                       android:id="@+id/map_cardView"
                       android:layout_width="130dp"
                       android:layout_height="130dp"
                       android:layout_margin="5dp"
                       android:clickable="true"
                       android:foreground="?android:attr/selectableItemBackground"
                       app:cardCornerRadius="30dp">

                       <LinearLayout
                           android:layout_width="match_parent"
                           android:layout_height="132dp"
                           android:background="@drawable/cardhospital_design"
                           android:gravity="center"
                           android:orientation="vertical">

                           <ImageView
                               android:layout_width="64dp"
                               android:layout_height="64dp"
                               android:background="@drawable/circle_map_background"
                               android:padding="10dp"
                               android:src="@drawable/map_icon_24dp" />

                           <TextView
                               android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
                               android:layout_marginTop="10dp"
                               android:text="@string/spread_map"
                               android:textColor="#020969"
                               android:textSize="15sp"
                               android:textStyle="bold" />
                       </LinearLayout>
                   </androidx.cardview.widget.CardView>


               </LinearLayout>

           </LinearLayout>



        </LinearLayout>
        </ScrollView>

   </RelativeLayout>


</LinearLayout>